AlbumRestControllerTest almost fixed