@@ -2,26 +2,29 @@ package cz.muni.fi.pa165.modulecore.rest;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import cz.muni.fi.pa165.modulecore.api.AlbumDto;
-import cz.muni.fi.pa165.modulecore.api.SongDto;
 import cz.muni.fi.pa165.modulecore.data.enums.Genre;
+import cz.muni.fi.pa165.modulecore.data.model.Album;
 import cz.muni.fi.pa165.modulecore.data.model.Band;
 import cz.muni.fi.pa165.modulecore.data.repository.AlbumRepository;
+import cz.muni.fi.pa165.modulecore.exception.ResourceNotFoundException;
 import cz.muni.fi.pa165.modulecore.mapper.AlbumMapper;
 import org.assertj.core.util.Lists;
 import org.json.JSONObject;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.time.Duration;
 import java.time.LocalDate;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
@@ -33,31 +36,26 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @AutoConfigureMockMvc
 class AlbumRestControllerTest {
     private static final Logger log = LoggerFactory.getLogger(AlbumRestControllerTest.class);
-    private final MockMvc mockMvc;
-    private final ObjectMapper objectMapper;
-    private final AlbumRepository albumRepository;
-    private final AlbumMapper albumMapper;
-
     @Autowired
-    public AlbumRestControllerTest(ObjectMapper objectMapper,
-                                   MockMvc mockMvc,
-                                   AlbumRepository albumRepository,
-                                   AlbumMapper albumMapper) {
-        this.mockMvc = mockMvc;
-        this.objectMapper = objectMapper;
-        this.albumRepository = albumRepository;
-        this.albumMapper = albumMapper;
-    }
+    private MockMvc mockMvc;
+    @Autowired
+    private ObjectMapper objectMapper;
+    @Autowired
+    private AlbumMapper albumMapper;
+    @MockBean
+    private AlbumRepository albumRepository;
 
     @Test
     void testAlbumsFindByIdOK() throws Exception {
         log.debug("testActivityFindByIdOK running");
-
-        AlbumDto expectedResponse = albumMapper.mapToDto(albumRepository.findAll().iterator().next());
+        Album album = new Album(1L, "name", LocalDate.now(), Genre.BLUES, Collections.emptyList(), new Band());
+        Mockito.when(albumRepository.findById(1L)).thenReturn(Optional.of(album));
+        AlbumDto expectedResponse = albumMapper.mapToDto(album);
 
         String response = mockMvc.perform(get(String.format("/albums/%s", expectedResponse.getId())))
                 .andExpect(status().isOk())
                 .andReturn().getResponse().getContentAsString();
+
         log.debug("response: {}", response);
         AlbumDto responseTour = objectMapper.readValue(response, AlbumDto.class);
         assertThat("response", responseTour, is(equalTo(expectedResponse)));
@@ -67,6 +65,7 @@ class AlbumRestControllerTest {
     @Test
     void testAlbumsFindByIdOKNotFound() throws Exception {
         log.debug("testAlbumsFindByIdOKNotFound running");
+        Mockito.when(albumRepository.findById(0L)).thenReturn(Optional.empty());
 
         mockMvc.perform(get("/albums/10000")).andExpect(status().isNotFound());
     }
@@ -74,10 +73,14 @@ class AlbumRestControllerTest {
     @Test
     void testAlbumsGetAll() throws Exception {
         log.debug("testAlbumsGetAll running");
+        Album album1 = new Album(1L, "name", LocalDate.now(), Genre.BLUES, Collections.emptyList(), new Band());
+        Album album2 = new Album(2L, "name2", LocalDate.now(), Genre.BLUES, Collections.emptyList(), new Band());
+        Mockito.when(albumRepository.findAll()).thenReturn(List.of(album1, album2));
 
         String response = mockMvc.perform(get("/albums"))
                 .andExpect(status().isOk())
                 .andReturn().getResponse().getContentAsString();
+
         log.debug("response: {}", response);
         List<AlbumDto> responseTours = objectMapper.readerForListOf(AlbumDto.class).readValue(response);
         assertThat("response", responseTours, is(equalTo(Lists.newArrayList(albumRepository.findAll()).stream().map(albumMapper::mapToDto).toList())));
@@ -121,62 +124,43 @@ class AlbumRestControllerTest {
     @Test
     void testAlbumCreateOK() throws Exception {
         log.debug("testActivityCreateOK running");
-
-        AlbumDto expectedResponse =
-                new AlbumDto(1500L,
-                        "Violator",
-                        LocalDate.of(1990, 3, 19),
-                        Genre.ROCK,
-                        List.of(new SongDto(1L, "Personal Jesus", Duration.ofSeconds(295)),
-                                new SongDto(2L, "Sweetest perfection", Duration.ofSeconds(282)),
-                                new SongDto(3L, "Waiting for the night", Duration.ofSeconds(367))), new Band());
-
+        Album album = new Album(null, "name", LocalDate.now(), Genre.BLUES, Collections.emptyList(), new Band());
+        AlbumDto expectedResponse = albumMapper.mapToDto(album);
+        Mockito.when(albumRepository.save(album)).thenReturn(album);
 
         String response = mockMvc.perform(post("/albums")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(expectedResponse)))
                 .andExpect(status().isOk())
                 .andReturn().getResponse().getContentAsString();
+
         log.debug("response: {}", response);
         AlbumDto responseTour = objectMapper.readValue(response, AlbumDto.class);
-        expectedResponse.setId(responseTour.getId());
         assertThat("response", responseTour, is(equalTo(expectedResponse)));
     }
 
     @Test
     void testAlbumUpdate() throws Exception {
         log.debug("testAlbumUpdate running");
-
-        AlbumDto expectedResponse = albumMapper.mapToDto(albumRepository.findById(100L).get());
-        expectedResponse.setSongs(new ArrayList<>());
+        Album album = new Album(1L, "name", LocalDate.now(), Genre.BLUES, Collections.emptyList(), new Band());
+        AlbumDto expectedResponse = albumMapper.mapToDto(album);
+        Mockito.when(albumRepository.save(album)).thenReturn(album);
+        Mockito.when(albumRepository.existsById(album.getId())).thenReturn(true);
 
         String response = mockMvc.perform(put(String.format("/albums/%s", expectedResponse.getId()))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(expectedResponse)))
                 .andExpect(status().isOk())
                 .andReturn().getResponse().getContentAsString();
+
         log.debug("response: {}", response);
         AlbumDto responseTour = objectMapper.readValue(response, AlbumDto.class);
         assertThat("response", responseTour, is(equalTo(expectedResponse)));
     }
 
     @Test
-    void testAlbumUpdateMissingId() throws Exception {
-        log.debug("testAlbumUpdateMissingId running");
-
-        AlbumDto expectedResponse = albumMapper.mapToDto(albumRepository.findById(100L).get());
-        expectedResponse.setSongs(new ArrayList<>());
-
-        mockMvc.perform(put(String.format("/albums/%s", 0L))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(expectedResponse)))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
     void testAlbumUpdateInvalidObject() throws Exception {
         log.debug("testAlbumUpdateInvalidObject running");
-
         String invalidSongs = "{\"id\":100,\"name\":\"In Utero\",\"releaseDate\":\"1990-03-19\",\"genre\":\"ROCK\",\"songs\":[{\"id\":null,\"title\":null,\"duration\":null}]}";
 
         mockMvc.perform(put("/albums/100")
@@ -188,16 +172,16 @@ class AlbumRestControllerTest {
     @Test
     void testAlbumDeleteOK() throws Exception {
         log.debug("testAlbumDeleteOK running");
+        Mockito.doNothing().when(albumRepository).deleteById(1L);
 
-        AlbumDto expectedResponse = albumMapper.mapToDto(albumRepository.findAll().iterator().next());
-
-        mockMvc.perform(delete(String.format("/albums/%s", expectedResponse.getId())))
+        mockMvc.perform(delete(String.format("/albums/%s", 1L)))
                 .andExpect(status().isOk());
     }
 
     @Test
     void testAlbumDeleteNotFound() throws Exception {
         log.debug("testAlbumDeleteNotFound running");
+        Mockito.doThrow(new ResourceNotFoundException()).when(albumRepository).deleteById(0L);
 
         mockMvc.perform(delete(String.format("/albums/%s", 0L)))
                 .andExpect(status().isNotFound());
